docs: clarify workflow and usage examples